--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
@@ -27,7 +28,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.4"
+    "react-router-dom": "^7.1.4",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
